# dovi_tool

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  editor.md  generator.md  profiles.md
.github/actions/setup-release-env/: action.yml
.github/workflows/: ci.yml  release.yml  test.yml
assets/: generator_example.json
assets/editor_examples/: active_area.json  active_area_all.json  convert_to_cmv4.json  crop.json  duplicate.json  fel_to_p81_encode.json  l9_and_l11.json  level6_metadata.json  levels.json  mode.json  p5_to_p81.json  remove.json  remove_cmv4.json  scene_cuts.json  source_rpu.json
assets/generator_examples/: default_cmv29.json  default_cmv40.json  full_example.json  l1_cmv29.json  l1_cmv29_override_avg_cmv40.json  l1_cmv40.json  no_duration.json
assets/hevc_tests/: no_aud_bl.hevc  no_aud_injected.hevc  no_aud_muxed.hevc  regular.hevc  regular.mkv  regular_bl_start_code_4.hevc  regular_bl_start_code_4_shorter.hevc  regular_convert_annexb.hevc  regular_demux_bl_annexb.hevc  regular_start_code_4.hevc  regular_start_code_4_muxed_el.hevc  regular_start_code_4_muxed_el_removed_eos.hevc  regular_start_code_4_shorter_muxed_el.hevc  regular_start_code_4_shorter_trimmed_el.hevc  sei-double-3byte-case.hevc  sei-double-3byte-start-code-4.hevc  sei-suffix-muxed-rpu.hevc  yusesope_regular_muxed.hevc
assets/tests/: cmv2_9.xml  cmv4_0_2.xml  cmv4_0_2_custom_displays.xml  cmv4_2_xml_510.xml  hdr10plus_metadata.json  level6_decimals.xml
bits_handler/: Cargo.toml
bits_handler/src/: bitvec_reader.rs  bitvec_writer.rs
bitvec_reader/: Cargo.toml
bitvec_reader/src/: lib.rs
docs/: README.md  editor.md  generator.md  profiles.md
dolby_vision/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cbindgen.toml
dolby_vision/benches/: bench_main.rs
dolby_vision/benches/benchmarks/: mod.rs  parsing.rs  rewriting.rs
dolby_vision/examples/: capi.c  capi_rpu_file.c  capi_single_rpu.c  helpers.h  simple_edit.cpp
dolby_vision/src/: capi.rs  lib.rs  utils.rs
dolby_vision/src/av1/: emdf.rs  mod.rs
dolby_vision/src/c_structs/: buffers.rs  dm_data.rs  extension_metadata.rs  mod.rs  rpu.rs  rpu_data_header.rs  rpu_data_mapping.rs  rpu_data_nlq.rs  vdr_dm_data.rs
dolby_vision/src/rpu/: dovi_rpu.rs  generate.rs  mod.rs  rpu_data_header.rs  rpu_data_mapping.rs  rpu_data_nlq.rs  utils.rs  vdr_dm_data.rs
dolby_vision/src/rpu/cmv4/: mod.rs
dolby_vision/src/rpu/extension_metadata/: cmv29.rs  cmv40.rs  mod.rs  primaries.rs
dolby_vision/src/rpu/extension_metadata/blocks/: level1.rs  level10.rs  level11.rs  level15.rs  level16.rs  level17.rs  level18.rs  level2.rs  level254.rs  level255.rs  level3.rs  level4.rs  level5.rs  level6.rs  level8.rs  level9.rs  mod.rs  reserved.rs
dolby_vision/src/rpu/profiles/: mod.rs  profile4.rs  profile5.rs  profile7.rs  profile81.rs  profile84.rs
dolby_vision/src/st2094_10/: ext_metadata_blocks.rs  generate.rs  mod.rs
dolby_vision/src/st2094_10/itu_t35/: cm_data.rs  dm_data.rs  mod.rs
dolby_vision/src/st2094_10/metadata_blocks/: level1.rs  level2.rs  level254.rs  level3.rs  level4.rs  level5.rs  level6.rs  level8.rs  level9.rs  mod.rs  reserved.rs
dolby_vision/src/xml/: mod.rs  parser.rs  tests.rs
hevc_bitstream/: Cargo.toml
hevc_bitstream/src/: hevc.rs  lib.rs  utils.rs  vps.rs
hevc_bitstream/src/hevc/: hrd_parameters.rs  mod.rs  pps.rs  profile_tier_level.rs  scaling_list_data.rs  short_term_rps.rs  sps.rs  vps.rs  vui_parameters.rs
madvr_parse/: .gitignore  Cargo.toml  README.md
madvr_parse/src/: lib.rs  utils.rs
src/: commands.rs  main.rs
src/bits/: bitvec_reader.rs  bitvec_writer.rs  mod.rs
src/commands/: convert.rs  demux.rs  editor.rs  export.rs  extract_rpu.rs  generate.rs  info.rs  inject_rpu.rs  mod.rs  mux.rs  plot.rs  remove.rs
src/dovi/: converter.rs  demuxer.rs  editor.rs  exporter.rs  general_read_write.rs  generator.rs  hdr10plus_utils.rs  io.rs  mod.rs  muxer.rs  parser.rs  plotter.rs  remover.rs  rpu.rs  rpu_extractor.rs  rpu_info.rs  rpu_injector.rs  tests.rs
src/dovi/rpu/: mod.rs  rpu_data.rs  rpu_data_header.rs  tests.rs  vdr_dm_data.rs  vdr_rpu_data.rs
src/dovi/xml/: parser.rs
src/tests/: av1_rpu.rs  mod.rs  rpu.rs
tests/: mod.rs
tests/hevc/: convert.rs  demux.rs  extract_rpu.rs  inject_rpu.rs  mod.rs  mux.rs  remove.rs
tests/rpu/: editor.rs  export.rs  generate.rs  info.rs  mod.rs  plot.rs
utilities_dovi/: Cargo.toml
utilities_dovi/src/: lib.rs
