[package]
name = "dovi_tool"
version = "2.1.2"
authors = ["quietvoid"]
edition = "2021"
rust-version = "1.79.0"
license = "MIT"
repository = "https://github.com/quietvoid/dovi_tool"
build = "build.rs"

[[bin]]
name = "dovi_tool"
path = "src/main.rs"

[dependencies]
dolby_vision = { path = "dolby_vision", "features" = ["xml", "serde"] }
bitvec_helpers = { version = "3.1.5", default-features = false, features = ["bitstream-io"] }
hevc_parser = { version = "0.6.3", features = ["hevc_io"] }
madvr_parse = "1.0.2"
hdr10plus = { version = "2.1.1", features = ["json"] }

anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive", "wrap_help", "deprecated"] }
clap_lex = "*"
indicatif = "0.17.8"
bitvec = "1.0.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.122", features = ["preserve_order"] }
itertools = "0.13.0"
plotters = { version = "0.3.6", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "all_series"] }

[dev-dependencies]
assert_cmd = "2.0.15"
assert_fs = "1.1.2"
predicates = "3.1.2"

[build-dependencies]
anyhow = "1.0.86"
vergen-gitcl = { version = "1.0.0", default-features = false, features = ["build"] }

[features]
default = ["system-font"]
system-font = ["plotters/ttf"]
internal-font = ["plotters/ab_glyph"]
