[package]
name = "dovi_tool"
version = "2.3.1"
authors = ["quietvoid"]
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
repository = "https://github.com/quietvoid/dovi_tool"
build = "build.rs"

[[bin]]
name = "dovi_tool"
path = "src/main.rs"

[dependencies]
dolby_vision = { path = "dolby_vision", "features" = ["xml", "serde"] }
bitvec_helpers = { version = "4.0.1", default-features = false, features = ["bitstream-io"] }
hevc_parser = { version = "0.6.10", features = ["hevc_io"] }
madvr_parse = "1.0.3"
hdr10plus = { version = "2.1.5", features = ["json"] }

anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "wrap_help", "deprecated"] }
clap_lex = "*"
indicatif = "0.18.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.148", features = ["preserve_order"] }
itertools = "0.14.0"
plotters = { version = "0.3.7", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "all_series"] }

[dev-dependencies]
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
predicates = "3.1.3"

[build-dependencies]
anyhow = "1.0.100"
vergen-gitcl = { version = "1.0.8", default-features = false, features = ["build"] }

[features]
default = ["system-font"]
system-font = ["plotters/ttf"]
internal-font = ["plotters/ab_glyph"]

[profile.release-deploy]
inherits = "release"
lto = "thin"
strip = "symbols"
