[package]
name = "dolby_vision"
version = "3.3.0"
authors = ["quietvoid"]
edition = "2021"
rust-version = "1.77.0"
license = "MIT"
description = "Dolby Vision metadata parsing and writing"
repository = "https://github.com/quietvoid/dovi_tool/tree/main/dolby_vision"

[dependencies]
bitvec_helpers = { version = "3.1.4", default-features = false, features = ["bitstream-io"] }
anyhow = "1.0.81"
bitvec = "1.0.1"
crc = "3.0.1"
roxmltree = { version = "0.19.0", optional = true }
serde = { version = "1.0.197", features = ["derive"], "optional" = true }
serde_json = { version = "1.0.114", features = ["preserve_order"], "optional" = true }
tinyvec = { version = "1.6.0", features = ["rustc_1_55"] }

libc = { version = "0.2", optional = true }

[dev-dependencies]
criterion = "0.5.1"

[features]
xml = ["roxmltree"]
serde = ["dep:serde", "dep:serde_json", "tinyvec/serde"]
capi = ["libc"]

[package.metadata.docs.rs]
all-features = true

[package.metadata.capi.header]
subdirectory = "libdovi"
name = "rpu_parser"

[package.metadata.capi.pkg_config]
strip_include_path_components = 1
subdirectory = false
name = "dovi"
filename = "dovi"

[package.metadata.capi.library]
rustflags = "-Cpanic=abort"
name = "dovi"

[lib]
doctest = false

[[bench]]
name = "bench_main"
harness = false
