[package]
name = "dolby_vision"
version = "3.3.2"
authors = ["quietvoid"]
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
description = "Dolby Vision metadata parsing and writing"
repository = "https://github.com/quietvoid/dovi_tool/tree/main/dolby_vision"

[dependencies]
bitvec_helpers = { version = "4.0.0", default-features = false, features = ["bitstream-io"] }
anyhow = "1.0.100"
bitvec = "1.0.1"
crc = "3.3.0"
roxmltree = { version = "0.21.1", optional = true }
serde = { version = "1.0.228", features = ["derive"], "optional" = true }
serde_json = { version = "1.0.145", features = ["preserve_order"], "optional" = true }
tinyvec = { version = "1.10.0", features = ["rustc_1_55"] }

libc = { version = "0.2", optional = true }

[dev-dependencies]
criterion = "0.7.0"

[features]
xml = ["roxmltree"]
serde = ["dep:serde", "dep:serde_json", "tinyvec/serde"]
capi = ["libc"]

[package.metadata.docs.rs]
all-features = true

[package.metadata.capi.header]
subdirectory = "libdovi"
name = "rpu_parser"

[package.metadata.capi.pkg_config]
strip_include_path_components = 1
subdirectory = false
name = "dovi"
filename = "dovi"

[package.metadata.capi.library]
rustflags = "-Cpanic=abort"
name = "dovi"

[lib]
doctest = false

[[bench]]
name = "bench_main"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(cargo_c)'] }

[profile.release-deploy]
inherits = "release"
lto = "thin"
strip = "symbols"
