[package]
name = "madvr_parse"
version = "0.1.3"
authors = ["quietvoid"]
edition = "2018"
rust-version = "1.51.0"
license = "MIT"
description = "madVR measurement file library"
repository = "https://github.com/quietvoid/dovi_tool/madvr_parse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
byteorder = "1.4.3"
